--- a/sandbox/Dockerfile
+++ b/sandbox/Dockerfile
@@ -29,5 +29,11 @@ RUN mkdir /home/steam/steamcmd &&  \
     curl -sqL "https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz" | tar zxvf -
 
 RUN mkdir /home/steam/scripts &&  \
-    cd /home/steam/scripts \
+    cd /home/steam/scripts
+
+
+COPY ./setup_script.sh .
+RUN chmod +x setup_script.sh && ./setup_script.sh
+
+CMD ["python3", "/home/steam/scripts/arga-server-updater/server_and_mods_updater.py", "--type=fastapi"]
 
