--- a/server_updater/intall_tools/setup_script.sh.example
+++ b/server_updater/intall_tools/setup_script.sh.example
@@ -5,7 +5,7 @@ git clone https://github_user:github_token@github.com/Clan-ArgA/arga-server-upda
 cd arga-server-updater
 git checkout lb_arma3_plus_reforger
 git pull
-echo "STEAM_USER=user" > ./server_updater/.env
-echo "STEAM_PASS=pass" >> ./server_updater/.env
+echo "STEAM_USER=anonymous" > ./server_updater/.env
+echo "STEAM_PASS=" >> ./server_updater/.env
 pip install --no-cache-dir -r requirements.txt
 cp /home/steam/scripts/arga-server-updater/server_updater/reforger_server_config.json /home/steam/steamcmd/reforger/config
