--- a/server_updater/reforger_config/reforger_server_config.json
+++ b/server_updater/reforger_config/reforger_server_config.json
@@ -35,12 +35,7 @@
 				"other": "values"
 			}
 		},
-		"mods": [
-			{
-                "modId": "595F2BF2F44836FB",
-                "name": "RHS - Status Quo"
-            }
-		]
+		"mods": []
 	},
 	"operating": {
 		"lobbyPlayerSynchronise": true
